feat: 테스트코드에 리뷰 작성 여부 반환되는지 추가